istio-kube/kube_svc_backend.yml
kind: Service
apiVersion: v1
metadata:
  name: backend
spec:
  clusterIP: None
  ports:
  - name: envoy-backend
    port: 8786
    targetPort: 8786
  selector:
    app: backend
