istio-kube/kube_ingress.yml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: service-mesh-gateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 8080
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: service-mesh
spec:
  hosts:
  - "*"
  gateways:
  - service-mesh-gateway
  http:
  - match:
    - uri:
        exact: /status
    - uri:
        prefix: /client
    route:
    - destination:
        host: backend-svc
        port:
          number: 9080
