istio-kube/kube_rules_all.yml
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-svc
spec:
  host: backend-svc
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-util
spec:
  host: backend-util
  subsets:
  - name: v1
    labels:
      version: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: backend-client
spec:
  host: backend-client
  subsets:
  - name: v1
    labels:
      version: v1
---
